# gds-mt-eval-harness

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  GUIDE.md  LICENSE  QUICKSTART.md  README.md  SIGNIFICANCE_SPEC.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: deploy-website.yml
datasets/: DATA_INTEGRITY.md  registry.json  tatoeba_probe_results.json
datasets/curated/: dan-fao-dev-v1.json  deu-ltz-dev-v1.json  eng-amh-dev-v1.json  eng-arb-dev-v1.json  eng-bos-dev-v1.json  eng-ceb-dev-v1.json  eng-cmn-dev-v1.json  eng-crk-dev-v1.json  eng-cym-dev-v1.json  eng-deu-dev-v1.json  eng-fra-dev-v1.json  eng-guj-dev-v1.json  eng-hau-dev-v1.json  eng-haw-dev-v1.json  eng-hil-dev-v1.json  eng-ibo-dev-v1.json  eng-ilo-dev-v1.json  eng-jpn-dev-v1.json  eng-kan-dev-v1.json  eng-kaz-dev-v1.json  eng-kor-dev-v1.json  eng-lao-dev-v1.json  eng-lug-dev-v1.json  eng-mal-dev-v1.json  eng-mlt-dev-v1.json  eng-mon-dev-v1.json  eng-mya-dev-v1.json  eng-nld-dev-v1.json  eng-pag-dev-v1.json  eng-pam-dev-v1.json  eng-pan-dev-v1.json  eng-por-dev-v1.json  eng-sin-dev-v1.json  eng-sme-dev-v1.json  eng-sna-dev-v1.json  eng-spa-dev-v1.json  eng-sqi-dev-v1.json  eng-tam-dev-v1.json  eng-tel-dev-v1.json  eng-tgl-dev-v1.json  (+20 more)
docs/: ARCHITECTURE.md  GDS_TRANSLATE_API_SPEC.md  GDS_TRANSLATE_BUILDOUT.md  METHOD_PLUGIN_SPEC.md  VISION_CROWDSOURCED_MT.md  method-card-spec.md  plugin-protocol.md  sandbox-evaluation-spec.md
eval/logs/: sweep_manifest.json
eval/logs/harness/: run_20260612_124749_anthropic_claudehaiku45_naive_all_b25_ebf42b_report.json  (+23 more)
eval_demo/: run_20260511_034729_gemini3flash_custom_all_demo_flash.json  run_20260511_034729_gemini3flash_custom_all_demo_flash_report.json  run_20260511_034802_gemini31pro_custom_all_demo_pro.json  run_20260511_034802_gemini31pro_custom_all_demo_pro_report.json
examples/basic_run/: run.py  sample_corpus.json
examples/custom_pipeline/: run.py
examples/export_plugin/: export.py
examples/method_plugin_passthrough/: method.json  passthrough.py
gds_mt_eval_harness/: __init__.py  __main__.py  _dashboard_css.py  _dashboard_js.py  api.py  cache.py  cli.py  compare.py  config.py  dashboard.py  exporter.py  runner.py  tester.py  watch.py
gds_mt_eval_harness/plugins/: __init__.py  hooks.py  metrics.py  prompts.py  tools.py
legal/: method-submission-agreement.md
migrations/: 001_add_comet_and_ci_columns.sql  002_add_metric_columns.sql  003_add_quality_params.sql  004_add_missing_ci_columns.sql  005_create_run_card_entries.sql  006_add_full_metric_columns.sql  007_add_token_efficiency_columns.sql  008_create_contests.sql  009_create_datasets.sql  010_add_style_column.sql  011_reconcile_datasets.sql  MOVED.md  README.md
mt_eval_harness/: __init__.py  __main__.py  _dashboard_charts.py  _dashboard_css.py  _dashboard_js.py  api.py  auth.py  cache.py  champollion_config.py  cli.py  compare.py  confidence.py  config.py  config_exporter.py  contest.py  corpus_fetch.py  corpus_loader.py  dashboard.py  exporter.py  language_cards.py  method_card_wizard.py  method_loader.py  metrics_comet.py  pipeline.py  plugin_discovery.py  publish.py  queue_runner.py  run_card.py  runner.py  scoring.py  setup_wizard.py  significance.py  tester.py  verifier.py  watch.py
mt_eval_harness/eval_standards/: __init__.py
mt_eval_harness/methods/: __init__.py  base_http_mt.py  deepl.py  google_translate.py  libretranslate.py  microsoft_translator.py  registry.py
mt_eval_harness/plugins/: __init__.py  champollion_prompts.py  code_switching.py  double_pass_compliance.py  fst_installer.py  giellalt_fst.py  hallucination.py  hooks.py  metrics.py  prompts.py  terminology.py  tools.py  writing_style.py
mt_eval_harness/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  openrouter.py  registry.py
mt_eval_harness/strategies/: __init__.py  batch.py  method_strategy.py  plugin_process.py  single.py  tool_call.py
scripts/: build_croissant.py  build_registry.py  generate_sweep_queue.py  lint_run_reports.py  migrate_registry_to_cards.py  publish_all_reports.py  push_harness_mirror.sh  run_baseline_sweep.py  run_queue.py  scrub_lemma_history.sh  simulate_queue_growth.py  verify_bridge_health_model.py
scripts/corpora-builder/: README.md  pyproject.toml
scripts/corpora-builder/corpora_builder/: __init__.py  __main__.py  build_all_globalvoices.py  build_all_tatoeba.py  build_api_corpora.py  build_dev_corpora.py  build_mesh_wave.py  build_website_corpora.py  cli.py  contamination.py  difficulty_estimator.py  domain_classifier.py  licensing.py  probe_tatoeba.py  richness.py  schema.py
scripts/corpora-builder/corpora_builder/adapters/: __init__.py  base.py  edtekla_adapter.py  globalvoices_adapter.py  opus_adapter.py  tatoeba_adapter.py  tatoeba_api_adapter.py  tatoeba_challenge_adapter.py
scripts/corpora-builder/tests/: test_contamination.py  test_edtekla_adapter.py  test_tatoeba_challenge.py
tests/: conftest.py  test_api.py  test_auth_env.py  test_bootstrap_ci_extended.py  test_by_domain.py  test_cache.py  test_cli.py  test_comet.py  test_compare.py  test_confidence.py  test_config.py  test_config_exporter.py  test_contest.py  test_corpus_fetch.py  test_coverage_skip.py  test_dashboard.py  test_double_pass.py  test_exporter.py  test_generate_sweep_queue.py  test_harness_integrity_fixes.py  test_lint_run_reports.py  test_metric_detectors.py  test_mt_methods.py  test_mt_wiring.py  test_pipeline.py  test_providers.py  test_publish.py  test_queue_spread.py  test_registry_and_cards.py  test_resolve_dataset_pip.py  test_retry_wait.py  test_run_queue.py  test_runner.py  test_scoring_ssot.py  test_significance.py  test_strategies.py  test_tester.py  test_verifier.py  test_watch.py  test_writing_style.py
website/: champollion.config.json  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/.champollion/: tm.json
website/docs/: how-it-works.md  how-this-site-is-translated.md  intro.md
website/i18n/ar/: code.json
website/static/: CNAME  llms-full.txt  llms.txt  robots.txt
(+659 files in other folders)
