[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt-eval-harness"
version = "3.0.0-rc.1"
description = "A configurable, language-agnostic evaluation harness for machine translation pipelines."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Curtis Forbes" },
]
keywords = ["machine-translation", "evaluation", "nlp", "low-resource-languages", "benchmarking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "sacrebleu>=2.3",
]

[project.optional-dependencies]
comet = [
    "unbabel-comet>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mt-eval = "mt_eval_harness.cli:main"
generate-plugin = "mt_eval_harness.cli:generate_plugin"

[project.urls]
Homepage = "https://github.com/gamedaysuits/mt-eval-harness"
Repository = "https://github.com/gamedaysuits/mt-eval-harness"
Issues = "https://github.com/gamedaysuits/mt-eval-harness/issues"

[tool.setuptools.packages.find]
include = ["mt_eval_harness*"]
