[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt-eval-harness"
version = "3.0.0"
description = "A configurable, language-agnostic evaluation harness for machine translation pipelines."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Curtis Forbes" },
]
keywords = ["machine-translation", "evaluation", "nlp", "low-resource-languages", "benchmarking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "sacrebleu>=2.3",
    # Required for fetch-from-source: the corpora-builder adapters shipped in
    # this wheel (corpora_builder.adapters.*) download upstream exports with
    # `requests`. Without it, `mt-eval run --corpus <id>` cannot rebuild a
    # missing corpus from source on a clean pip install — the core path for
    # every contributor who runs the public queue.
    "requests>=2.28",
]

[project.optional-dependencies]
comet = [
    "unbabel-comet>=2.2",
]
fst = [
    "pyhfst>=1.4",
]
crk = [
    "spacy>=3.7",
    "pyhfst>=1.4",
    "requests>=2.28",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mt-eval = "mt_eval_harness.cli:main"
generate-plugin = "mt_eval_harness.cli:generate_plugin"

[project.urls]
Homepage = "https://github.com/gamedaysuits/gds-mt-eval-harness"
Repository = "https://github.com/gamedaysuits/gds-mt-eval-harness"
Issues = "https://github.com/gamedaysuits/gds-mt-eval-harness/issues"

# Ship both the harness AND the corpora-builder adapters — the builders are
# what turn a registry recipe into a downloaded corpus, so a standalone
# `pip install` must carry them. They live under scripts/corpora-builder/.
[tool.setuptools.packages.find]
where = [".", "scripts/corpora-builder"]
include = ["mt_eval_harness*", "corpora_builder*"]

# Bundle the registry inside the package (the offline fallback for the
# remote-fetch path). build_registry.py writes mt_eval_harness/data/registry.json.
[tool.setuptools.package-data]
mt_eval_harness = ["data/*.json"]
