[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "champollion-corpora-builder"
version = "0.1.0"
description = "Multi-source corpus construction tooling for the MT Eval Arena"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Curtis Forbes" },
]
keywords = [
    "machine-translation",
    "corpus",
    "parallel-text",
    "nlp",
    "evaluation",
    "low-resource-languages",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
build-corpus = "corpora_builder.cli:main"

[project.urls]
Homepage = "https://github.com/gamedaysuits/champollion-corpora-builder"
Repository = "https://github.com/gamedaysuits/champollion-corpora-builder"
Issues = "https://github.com/gamedaysuits/champollion-corpora-builder/issues"

[tool.setuptools.packages.find]
include = ["corpora_builder*"]
